Adjustments to menu

--- a/f1-stats/src/app/app.component.html
+++ b/f1-stats/src/app/app.component.html
@@ -11,11 +11,11 @@
       <mat-icon>track_changes</mat-icon>
       <span>Races</span>
     </button>
-    <button mat-menu-item disabled>
+    <button mat-menu-item [routerLink]="['/constructors']">
       <mat-icon>groups</mat-icon>
       <span>Constructors</span>
     </button>
-    <button mat-menu-item>
+    <button mat-menu-item [routerLink]="['/drivers']">
       <mat-icon>airline_seat_recline_extra</mat-icon>
       <span>Drivers</span>
     </button>
