Added check if races are loaded, before calling Http Ajax

--- a/f1-stats/src/app/pages/races/races.component.html
+++ b/f1-stats/src/app/pages/races/races.component.html
@@ -1,5 +1,5 @@
 <div class="grid">
-  <mat-card class="f1-card" *ngFor="let race of races">
+  <mat-card class="f1-card" *ngFor="let race of races$ | async">
     <mat-card-header>
       <mat-card-title>{{ race.raceName }}</mat-card-title>
       <mat-card-subtitle>{{ race.Circuit.circuitName }}</mat-card-subtitle>
