Added check if requested quali result is already loaded

--- a/f1-stats/src/app/components/qualifying-results/qualifying-results.component.html
+++ b/f1-stats/src/app/components/qualifying-results/qualifying-results.component.html
@@ -1,1 +1,6 @@
 <p>qualifying-results works!</p>
+<div *ngIf="qualiyingResult">
+  <div *ngFor="let result of qualiyingResult">
+    {{ result.position }} - {{ result.Driver.code }} - {{ result.Q3 }}
+  </div>
+</div>
