--- a/f1-stats/src/app/pages/races/races.component.html
+++ b/f1-stats/src/app/pages/races/races.component.html
@@ -1,8 +1,8 @@
 <div class="grid">
   <mat-card class="f1-card" *ngFor="let race of races$ | async">
     <mat-card-header>
-      <mat-card-title
-        >Round {{ race.round }} {{ race.raceName }}</mat-card-title
+      <mat-card-title>
+        Round {{ race.round }} {{ race.raceName }}</mat-card-title
       >
       <mat-card-subtitle
         >{{ race.Circuit.circuitName }} -
