--- a/f1-stats/src/app/components/qualifying-results/qualifying-results.component.html
+++ b/f1-stats/src/app/components/qualifying-results/qualifying-results.component.html
@@ -1,6 +1,48 @@
-<p>qualifying-results works!</p>
-<div *ngIf="qualiyingResult">
-  <div *ngFor="let result of qualiyingResult">
-    {{ result.position }} - {{ result.Driver.code }} - {{ result.Q3 }}
+<div class="container">
+  <div *ngIf="qualiyingResult.length == 0">Loading...</div>
+  <div *ngIf="qualiyingResult">
+    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+
+      <!-- Position Column -->
+      <ng-container matColumnDef="position">
+        <th mat-header-cell *matHeaderCellDef>No.</th>
+        <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.Driver.givenName }} {{ element.Driver.familyName }}
+        </td>
+      </ng-container>
+
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="Q1">
+        <th mat-header-cell *matHeaderCellDef>Q1</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.Q3 }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Q2">
+        <th mat-header-cell *matHeaderCellDef>Q2</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.Q2 }}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="Q3">
+        <th mat-header-cell *matHeaderCellDef>Q3</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.Q2 }}
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
   </div>
 </div>
